# GraphOps

./: .gitignore  Graphops全部有效结构化代码.txt  README.md  compose.yaml  go.mod  go.sum  设计方案.md
cmd/incident-api/: main.go
cmd/ops-gateway/: main.go
docs/: full-flow-report-and-runbook.md
grafana/dashboards/: agent-runtime.json  incident-overview.json
grafana/provisioning/dashboards/: dashboards.yml
internal/incidentapi/: demo_assets.go  demo_handlers.go  mysql_store.go  repository.go  server.go  store.go  store_test.go  types.go
internal/incidentapi/demo/: app.js  index.html  styles.css
internal/opsgateway/: gateway.go  mockdata.go  mysql_store.go  redis.go  server.go  store.go  store_test.go  telemetry.go  types.go
orchestrator/: pyproject.toml
orchestrator/graphops_orchestrator/: __init__.py  agent_schemas.py  app.py  checkpointer.py  clients.py  graph.py  llm.py  logic.py  models.py  prompts.py  redis_runtime.py  report_skill.py  telemetry.py
orchestrator/tests/: test_graph_runner.py  test_llm_routing.py  test_logic.py  test_persistence.py
prometheus/: prometheus.yml
scripts/: dev.ps1  eval.ps1  mysql-down.ps1  mysql-migrate.ps1  mysql-up.ps1  replay.ps1  run-full-flow.ps1
sql/migrations/: 001_init.sql
