[project]
name = "graphops-orchestrator"
version = "0.1.0"
description = "LangGraph orchestrator for GraphOps"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "langchain>=1.0.0",
  "langchain-ollama>=1.1.0",
  "langgraph>=0.2.50",
  "langgraph-checkpoint-sqlite>=3.0.0",
  "opentelemetry-api>=1.41.0",
  "opentelemetry-sdk>=1.41.0",
  "pydantic>=2.10.0",
  "prometheus-client>=0.14.0",
  "redis>=6.0.0",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
